# libsat355

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  LICENSE  README.md  clangWarnings.txt  dllmain.cpp  spike_gof.md  spike_multinvi.md
app/: CMakeLists.txt  app355.cpp  app355.h
app-cpp/: CMakeLists.txt  app355.cpp  app355.h  appPtr.hpp
app-swift/: CMakeLists.txt  app355.cpp  app355.swift
cppOrbitTools/: README.md  stdafx.h
cppOrbitTools/orbitTools/core/: cTLE.cpp
cppOrbitTools/orbitTools/orbit/: cNoradSDP4.h
cppOrbitTools/overrides/core/: stdafx.h
cppOrbitTools/overrides/orbit/: orbitLib.h  stdafx.h
src/: CMakeLists.txt  dllmain.cpp  dllmain.h  helloworld.cpp  helloworld.hpp  libsat355.cpp  libsat355.h
src/include/: module.modulemap
tests/: CMakeLists.txt  StarlinkPretty.txt  StarlinkTLE.txt  TrainTestTLE.txt  test1.cpp
